2008-02-08  Ivan N. Zlatev  <contact@i-nz.net>

	* ColorEditor.cs: Fix Height to include the last 8th row.

2008-02-05  Ivan N. Zlatev  <contact@i-nz.net>

	* ColorEditor.cs: Set the Height to match the custom colors tab
	Height.
	[Fixes bug #356527]

2008-02-04  Ivan N. Zlatev  <contact@i-nz.net>

	 * ColorEditor.cs: Perfom action in OnMouseUp only if in client.
	 [Fixes bug #358444]

2007-11-13  Atsushi Enomoto  <atsushi@ximian.com>

	* ToolboxItemCreator.cs, ToolboxService.cs, ToolboxItemContainer.cs:
	  couple of 2.0 API fixes.

2007-05-30  Sebastien Pouliot  <sebastien@ximian.com>

	* CursorEditor.cs: Add new (2.0) IsDropDownResizable property.
	* ImageEditor.cs: Add new (2.0) GetImageExtenders method.
	* ToolboxItemContainer.cs: New. Stub to reduce MoMA missing report.
	* ToolboxItemCreator.cs: New. Stub to reduce MoMA missing report.
	* ToolboxService.cs: New. Stub to reduce MoMA missing report.

2006-10-25  Chris Toshok  <toshok@ximian.com>

	* IconEditor.cs: the value we're painting isn't an Image, it's an
	Icon.  use Icon.ToBitmap to get something we can actually draw.

2006-10-13  Chris Toshok  <toshok@ximian.com>

	* ColorEditor.cs: we also need to make sure we set selected_color
	and color_chosen initially.

2006-10-13  Chris Toshok  <toshok@ximian.com>

	* ColorEditor.cs: windows allows a null to be passed in to
	EditValue (indeed, the property grid when showing a merged view
	requires it).  Also, if no change is made we need to return the
	initial value (so, if you pass null in, and don't make a change,
	null should be returned.

2006-07-31  Jonathan Chambers <joncham@gmail.com>

	* ColorEditor.cs: Add custom color picker tab.

2006-04-27  Jonathan Chambers <jonathan.chambers@ansys.com>

	* ColorEditor.cs: Make into a drop down editor
	  and begin work on editor.

2006-04-26  Alexander Olk <alex.olk@googlemail.com>

	* ColorEditor.cs: Dispose the SolidBrush that fills the color
	  rectangle and don't draw a border which uglifys
	  PropertyGrid
